hphp/test/slow/autoload/autoload_symbol_to_path.php.expectf
Fatal error: Uncaught exception 'InvalidOperationException' with message 'Only available when autoloader is active' in %s/hphp/test/slow/autoload/autoload_symbol_to_path.php:13
Stack trace:
%A
